[tool.poetry]
name = "packages"
version = "0.1.0"
description = ""
authors = ["Chris Hunt <chrahunt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.10.0"
lxml = "^4.4.2"
requests = "^2.22.0"
requests-cache = "^0.5.2"
tqdm = "^4.40.2"
redis = "^3.3.11"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
